--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm run lint
       - name: Run tests
         run: npm test
-  deploy:
+  build:
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -35,6 +35,16 @@ jobs:
       - name: Install deps
         run: npm ci
       - name: Build project
+        run: npm run build
+      - name: Upload build
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: dist
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
         run: npm run build
       - name: Deploy
         run: echo "Deploy mock"
