--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-        run: npm run build
+      - name: Get build
+        uses: actions/download-artifact@v3
+        with:
+          name: build
       - name: Deploy
-        run: echo "Deploy mock"
+        run: ls && echo "Deploy mock"
