--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
         run: npm test
   build:
     needs: test
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file }}
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -36,6 +38,8 @@ jobs:
         run: npm ci
       - name: Build project
         run: npm run build
+      - name: Publish filename
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - name: Upload build
         uses: actions/upload-artifact@v3
         with:
@@ -49,5 +53,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build
+      - name: Get script-file
+        run: echo ${{ needs.build.outputs.script-file }}
       - name: Deploy
         run: ls && echo "Deploy mock"
