--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,14 @@ jobs:
       - name: Lint code
         run: npm run lint
       - name: Run tests
+        id: run-tests
         run: npm test
+      - name: Upload test report
+        if: {{ failure() && steps.run-tests.outcome == 'failure' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: test.json
   build:
     needs: test
     outputs:
