--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,14 +8,17 @@ on:
       - main
 jobs:
   test:
-    runs-on: ubuntu-latest
+    matrix:
+      node-version: [16, 18]
+      os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: Install Node 18
+      - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: ${{ matrix.node-version }}
       - name: Cache deps
         uses: actions/cache@v3
         with:
