--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,10 @@ on:
       - main
 jobs:
   test:
-    matrix:
-      node-version: [16, 18]
-      os: [ubuntu-latest, windows-latest, macos-latest]
+    strategy:
+      matrix:
+        node-version: [16, 18]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Get code
